--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="styles/main.css" />
-    <title>Testing Git</title>
+    <title>My first Git project</title>
   </head>
   <body>
-    <h1>Testing Git</h1>
+    <h1>:)</h1>
   </body>
 </html>
